# poc-ml-system-1

./: .gitignore  README.md  docker-compose.ymkl  docker-compose.yml
modules/machine-learning/: alembic.ini  config.py  event_broker_base.py  event_broker_base_util.py  event_broker_in_memory.py  pyproject.toml  run-consumer.py
modules/machine-learning/infra/: alembic.ini
modules/machine-learning/infra/event_subscriber/on_task_failed/: update_progress_log.py
modules/machine-learning/infra/event_subscriber/on_task_finish/: update_progress_and_result.py
modules/machine-learning/infra/event_subscriber/on_task_start/: update_progress_or_log.py
modules/machine-learning/infra/migrations/: env.py
modules/machine-learning/infra/migrations/versions/: 34a023c7a10d_add_command_to_task_schema.py  905c005c74fd_add_created_date_time_to_task.py  94db7e78f4c5_add_schema.py  96b907ae8ba1_add_created_date_to_task.py  f21ab15ed17f_add_input.py
modules/machine-learning/infra/repo/: pg_task.py
modules/machine-learning/infra/sqlalchemy/: database.py  schema.py
modules/machine-learning/models/: __init__.py  command.py  task.py  task_events.py
modules/machine-learning/repository/: task.py
modules/machine-learning/test/: conftest.py  test_task_usecases.py
modules/machine-learning/usecase/: task.py
modules/portal-service/: README.md  app.ts  package.json  registry.base.ts
modules/portal-service/controller/: task.controller.ts
modules/portal-service/database-typeorm/: datasource.ts
modules/portal-service/ports/: object-storage.base.ts  (+1 more)
modules/webapp/: .build.env
(+12 files in other folders)
